[package]
name = "perdcomp_csv_to_xlsx"
description = "parse perdcomp csv to xlsx file"
license = "BSD-3-Clause"
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities"]
keywords = [
    "parse",
    "perdcom",
    "csv",
    "xlsx"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0" # used by clap color
claudiofsr_lib = "0.14"
csv = "1.3"
encoding_rs = "0.8"
encoding_rs_io = "0.1.7"
itertools = "0.13"
regex = { version = "1.10", features = ["unicode"] }
rayon = "1.10"
serde-aux = "4.5"
# serde_json = "1.0"
struct_iterable = "0.1"
once_cell = "1.20"
tempfile = "3.14"

[dependencies.clap]
version = "4.5"
features = [
    "color",
    "derive",
    "env",    
]

[dependencies.chrono]
version = "0.4"
features = [
    "serde",
]

[dependencies.rust_xlsxwriter]
# git = "https://github.com/jmcnamara/rust_xlsxwriter.git"
version = "0.79"
features = [
    "chrono",
    "serde",
    "zlib",
    # "polars",
]

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[lints.rust]
unsafe_code = "forbid"

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
debug = false           # No debug info at all.
strip = "symbols"       # Strip symbols from a binary.
opt-level = 3           # All optimizations.
overflow-checks = true  # Panic will occur on overflow.
lto = true              # Enable link time optimization.
codegen-units = 1       # Use a single codegen for size optimization.
panic = "abort"         # Remove traceback information.
incremental = true      # Save information to disk, improving re-compile times.

[profile.dev]
opt-level = 1           # Use slightly better optimizations.
